--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -81,64 +81,34 @@
                                               </div>
                                             </div>
                                             <div class="card-body card">
-                                              <div class="form-group">
-                                                <label class="form-label">Blog Title</label>
-                                                {% render_field form.title class="form-control" placeholder="Blog Title" %}
-                                                {% if form.errors %}
-                                                <p class="text-danger">{{form.errors.title.as_text}}</p>
+                                              {% if new_comment %}
+                                              <div class="alert alert-success" role="alert">
+                                                Your comment is awaiting moderation
+                                              </div>
+                                              {% else %}
+                                                <h5>Leave a comment</h5>
+                                                <form method='POST' enctype='multipart/form-data' novalidate>{% csrf_token %}
+                                                  
+                                                  {% comment %} {{ comment_form.as_p }} {% endcomment %}
+                                                  <div class="form-group">
+                                                    <label class="form-label">Name</label>
+                                                    {% render_field comment_form.name class="content" placeholder="Your name" %}
+                                                  </div>
+                                                  <div class="form-group">
+                                                    <label class="form-label">Email</label>
+                                                    {% render_field comment_form.email class="content" placeholder="Your email." %}
+                                                  </div>
+                                                  <div class="form-group">
+                                                    <label class="form-label">Comment</label>
+                                                    {% render_field comment_form.body class="content" placeholder="Write your comment here..." %}
+                                                  </div>
+                                                  {% csrf_token %}
+                                                  <button type="submit" class="btn btn-primary  btn-lg">Post Comment</button>
+                                                </form>
                                                 {% endif %}
-                                              </div>
-                                              <div class="form-group">
-                                                <label class="form-label">Url</label>
-                                                {% render_field form.slug class="form-control" placeholder="blog url" %}
-                                                {% if form.errors %}
-                                                  <p class="text-danger">{{form.errors.slug.as_text}}</p>
-                                                {% endif %}
-                                              </div>
-                                              <div class="form-group">
-                                                <label class="form-label">Post</label>
-                                                {% render_field form.my_field class="content" placeholder="Write your blog posts here..." %}
-                                              </div>
-                                              <div class="form-group">
-                                                <div class="form-group">
-                                                  <label class="form-label">Background Image (600px by 600px)</label>
-                                                  {% render_field form.image class="form-control" placeholder="upload image" %}
-                                                  {% if form.errors %}
-                                                  <p class="text-danger">{{form.errors.image.as_text}}</p>
-                                                  {% endif %}
-                                                </div>
-                                              </div>
-                                              <hr />
-                                              <div class="form-group">
-                                                <label class="form-label">Author</label>
-                                                {% render_field form.author class="form-control" placeholder="Publisher name" %}
-                                                {% if form.errors %}
-                                                  <p class="text-danger">{{form.errors.author.as_text}}</p>
-                                                {% endif %}
-                                              </div>
-                                              <div class="form-group">
-                                                <label class="form-label">Category</label>
-                                                {% render_field form.category class="form-control" placeholder="Enter Category" %}
-                                                {% if form.errors %}
-                                                  <p class="text-danger">{{form.errors.category.as_text}}</p>
-                                                {% endif %}
-                                              </div>
-                                              <div class="form-group">
-                                                <label class="form-label">Tags</label>
-                                                {% render_field form.tags class="form-control" placeholder="Tags (Separate by commas)" %}
-                                                {% if form.errors %}
-                                                  <p class="text-danger">{{form.errors.tags.as_text}}</p>
-                                                {% endif %}
-                                              </div>
-                                              {% if form.errors %}
-                                              <div class="alert alert-danger text-center" role="alert">
-                                                Error: Review your input
-                                              </div>
-                                              {% endif %}
                                               <div class="card-footer text-right">
                                                 <div class="d-flex">
-                                                  <a href="{% url 'view_blogs' %}" class="btn btn-link">Cancel</a>
-                                                  <button type="submit" class="btn btn-primary ml-auto">Post</button>
+                                                  <button type="submit" class="btn btn-primary ml-auto">cPost Comment</button>
                                                 </div>
                                               </div>
                                             </div>
