--- a/mainwebsite/templates/mainwebsite/blog-details.html
+++ b/mainwebsite/templates/mainwebsite/blog-details.html
@@ -81,7 +81,7 @@
                                               </div>
                                             </div>
                                             
-                                            <div class="col-md-12  mb-4  mt-3 ">
+                                            <div class="col-md-12 card mb-4  mt-3 ">
 
                                               <div class="card-body">
                                                 {% if new_comment %}
